Fix accountSummary public key overlapping the copy button.

--- a/html/www/css/app.css
+++ b/html/www/css/app.css
@@ -158,7 +158,7 @@
   }
  .btn.btn-default.btn-xs.copyaddress
  {
-   margin-top: 1%;
+   margin-top: 5%;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    background-color: #399e5a;
